# IOOS-Cloud-Sandbox

./: .gitignore  DEPLOYMENT.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
_PACKER/: held.tf  init.pkr.hcl
_PACKER/_SCRIPT_DEBUG/: environment-vars.sh  funcs-setup-instance.sh  init_template.sh
cloudflow/cluster/: AWSCluster.py
cloudflow/services/: LoggingService.py
cloudflow/workflows/scripts/: copyResults2S3.sh  getICsWRFROMS.sh  getNOSOFSfix.sh  s3cp.sh
code/: pyproject.toml
misc/spack/: create-buildcache.sh
models/adcirc-cora/: getS3packages.sh  install-adcirc-cora.sh
patches/adcirc-cora/: fix4cora.sh
scripts/: GEN_AND_RUN.sh  funcs-setup-instance.sh  install_jupyterhub.sh  spack-update-mirror.sh
scripts/archived/: install_slurm.sh
terraform/: TFOverrides.sh  config.s3.tfbackend  init_template.tpl  main.tf  malvis_addons.tf  mysettings.tfvars  new_createkey.sh  outputs.tf  pipeline.tf  providers.tf  variables.tf
terraform/modules/: orig.main.tf
terraform/remote-state/: main.tf  s3.defaults.tfvars  variables.tf
terraform/sandbox/: iam.tf  imageoptions.tf  instance_headnode.tf  main.tf  mykelsettings.tfvars  networking.tf  other.tf  pipeline.tf  storage.tf  variables.tf
terraform/save/: main.tf.saved
